--- a/src/D66.US2024.App/_Imports.razor
+++ b/src/D66.US2024.App/_Imports.razor
@@ -6,5 +6,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MudBlazor
+@using Ambacht.Common
+@using Ambacht.Common.Blazor
+@using D66.US2024
 @using D66.US2024.App
 @using D66.US2024.App.Layout
