--- a/src/D66.US2024.App/Layout/MainLayout.razor
+++ b/src/D66.US2024.App/Layout/MainLayout.razor
@@ -1,16 +1,19 @@
 ﻿@inherits LayoutComponentBase
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<MudThemeProvider />
+<MudPopoverProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+<MudLayout>
+	<MudAppBar>
+		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
+		D66 TAIS US Elections
+	</MudAppBar>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+	<MudMainContent>
+		<MudContainer MaxWidth="MaxWidth.Medium">
+			@Body
+		</MudContainer>
+	</MudMainContent>
+</MudLayout>
+
