--- a/src/Ambacht.Common.Maps.Blazor/Vector/VectorMap.razor
+++ b/src/Ambacht.Common.Maps.Blazor/Vector/VectorMap.razor
@@ -12,7 +12,8 @@
 	 @onmouseover="OnMouseOver"
 	 @onmouseout="OnMouseOut"
 	 @onmousewheel="OnMouseWheel"
-	 oncontextmenu="return false">
+     oncontextmenu="return false"
+     @attributes="@AdditionalAttributes">
 	<CascadingValue Value="_view">
 		@ChildContent
 	</CascadingValue>
@@ -27,8 +28,8 @@
 	[Parameter()]
 	public RenderFragment ChildContent { get; set; }
 
-	[Parameter()]
-	public string Class { get; set; }
+	[Parameter(CaptureUnmatchedValues = true)]
+	public Dictionary<string, object> AdditionalAttributes { get; set; }
 
 	[Parameter()]
 	public bool EnableMouseZoom { get; set; } = true;
