Added tailwind stuff

--- a/src/D66.US2024.App/Components/ElectionMap.razor
+++ b/src/D66.US2024.App/Components/ElectionMap.razor
@@ -1,4 +1,4 @@
-﻿<VectorMap class="w-full aspect-[3/2] bg-[#bbccff] block">
+﻿<VectorMap class="w-full aspect-[3/2] bg-[#bbccee] block">
 	
 </VectorMap>
 
