Yes! I have a US map on the screen

--- a/src/Ambacht.Common.Maps.Blazor/Vector/VectorElement.razor
+++ b/src/Ambacht.Common.Maps.Blazor/Vector/VectorElement.razor
@@ -55,9 +55,10 @@
 
 		if (_transform == null)
 		{
+			var coord = Center;
 			_transform =
 				new SvgTransformBuilder()
-					.Translate(View.WorldToScreen(Center))
+					.Translate(View.WorldToScreen(coord))
 					.Build();
 		}
 
