--- a/src/D66.US2024.App/Layout/MainLayout.razor
+++ b/src/D66.US2024.App/Layout/MainLayout.razor
@@ -4,16 +4,18 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudLayout>
-	<MudAppBar>
-		<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
-		D66 TAIS US Elections
-	</MudAppBar>
+<WindowEventLayer>
+	<MudLayout>
+		<MudAppBar>
+			<MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" />
+			D66 TAIS US Elections
+		</MudAppBar>
 
-	<MudMainContent>
-		<MudContainer MaxWidth="MaxWidth.Medium">
-			@Body
-		</MudContainer>
-	</MudMainContent>
-</MudLayout>
+		<MudMainContent>
+			<MudContainer MaxWidth="MaxWidth.Medium">
+				@Body
+			</MudContainer>
+		</MudMainContent>
+	</MudLayout>
+</WindowEventLayer>
 
