--- a/src/D66.US2024.App/_Imports.razor
+++ b/src/D66.US2024.App/_Imports.razor
@@ -9,7 +9,9 @@
 @using MudBlazor
 @using Ambacht.Common
 @using Ambacht.Common.Blazor
+@using Ambacht.Common.Blazor.Components
 @using Ambacht.Common.Maps.Blazor
+@using Ambacht.Common.Maps.Blazor.Components
 @using Ambacht.Common.Maps.Blazor.Vector
 @using D66.US2024
 @using D66.US2024.App
