--- a/src/D66.US2024.App/Layout/MainLayout.razor
+++ b/src/D66.US2024.App/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
 		</MudAppBar>
 
 		<MudMainContent>
-			<MudContainer MaxWidth="MaxWidth.Medium">
+			<MudContainer MaxWidth="MaxWidth.Large">
 				@Body
 			</MudContainer>
 		</MudMainContent>
