--- a/src/D66.US2024.App/wwwroot/css/tailwind.css
+++ b/src/D66.US2024.App/wwwroot/css/tailwind.css
@@ -590,6 +590,14 @@ video {
   position: relative;
 }
 
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
@@ -620,11 +628,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.bg-\[\#bbccee\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(187 204 238 / var(--tw-bg-opacity));
 }
 
 .px-3 {
