--- a/src/D66.US2024.App/wwwroot/css/tailwind.css
+++ b/src/D66.US2024.App/wwwroot/css/tailwind.css
@@ -606,6 +606,10 @@ video {
   display: table;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -624,6 +628,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .rounded-md {
