Show electoral vote count instead of state count.

--- a/src/D66.US2024.App/Components/ElectionMap.razor
+++ b/src/D66.US2024.App/Components/ElectionMap.razor
@@ -154,7 +154,7 @@
 			Text = "white",
 			Background = grouping.Key.GetColor(),
 			Align = grouping.Key.Party().Align,
-			Fraction = (double)grouping.Count() / States.Count,
+			Fraction = (double)grouping.Sum(i => i.ElectoralVotes) / States.Count,
 		};
 	}
 
