--- a/src/D66.US2024.App/Components/SimulationResults.razor
+++ b/src/D66.US2024.App/Components/SimulationResults.razor
@@ -15,8 +15,8 @@
 			return new HorizontalBarChart.Item()
 			{
 				Title = party.Name,
-				Background = party.Color,
-				Text = "white",
+				BackgroundColor = party.Color,
+				TextColor = "white",
 				Fraction = s.WinFraction,
 				Value = $"{s.WinFraction:0.0%}",
 				Align = party.Align
